MAPD-701 - Fix mobile menu position on iOS devices

--- a/frontend/map/styles/mobile-nav.styl
+++ b/frontend/map/styles/mobile-nav.styl
@@ -12,7 +12,7 @@ $menu-footer-viewer-height = 129px
 
 #mobile-nav
 
-  position fixed
+  position absolute
   z-index 1001
   left 0
   top 0
